# ml_capacity_planner

./: QUICK_START.md  README.md  main.py  pyproject.toml  pytest.ini  report.md  results.json
examples/: deep_learning.yaml  linear_regression.yaml  transformer.yaml
ml_capacity_planner/: cli.py  config.py  hardware.py  io.py  registry.py  report.py
ml_capacity_planner/calculators/: classical.py  deep.py
tests/: __init__.py  test_ml_capacity_planner.py
